--- a/ulf-datasync/pom.xml
+++ b/ulf-datasync/pom.xml
@@ -8,6 +8,6 @@
 		<version>${revision}</version>
 	</parent>
 
-	<artifactId>ulf-back</artifactId>
+	<artifactId>ulf-datasync</artifactId>
 
 </project>
