Added simple web socket implementation using Spring WebFlux (clients connect & via HTTP a message can be sent back from the server to all connected clients (multicast))

--- a/ulf-api/pom.xml
+++ b/ulf-api/pom.xml
@@ -8,6 +8,14 @@
 		<version>${revision}</version>
 	</parent>
 
-	<artifactId>ulf-model</artifactId>
+    <artifactId>ulf-api</artifactId>
+
+	<dependencies>
+		<dependency>
+			<groupId>be.niedel</groupId>
+			<artifactId>ulf-model</artifactId>
+			<version>${revision}</version>
+		</dependency>
+	</dependencies>
 
 </project>
