--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
 	</properties>
 
 	<modules>
-		<module>ulf-datasink</module>
-		<module>ulf-model</module>
+		<module>ulf-api</module>
 	</modules>
 
 	<dependencies>
